# random_algo_book

./: .gitignore  CMakeLists.txt  Makefile  README.md  rand_algo.tex
chapters/: chapter1.tex  chapter10.tex  chapter11.tex  chapter12.tex  chapter13.tex  chapter14.tex  chapter15.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex
examples/: algebraic_example.cpp  benchmarks.cpp  data_structures_example.cpp  geometry_example.cpp  graph_example.cpp  modern_algorithms_example.cpp  probability_example.cpp
include/: ral.h
include/ral/: adversary.h  algebraic.h  apsp.h  binary_planar_partition.h  chernoff.h  compat_print.h  convex_hull.h  coupon_collector.h  crypto.h  data_structures.h  delaunay.h  freivalds.h  geometry.h  graph.h  hash_table.h  k_server.h  las_vegas_monte_carlo.h  lazy_select.h  linear_programming.h  martingales.h  matchings.h  min_cut.h  min_cut_chapter1.h  mis.h  mst.h  number_theory.h  paging.h  polynomial.h  polynomial_chapter8.h  pram_simulation.h  probabilistic_recurrence.h  probability.h  rabin_karp.h  random_projection.h  random_utils.h  randomized_linear_algebra.h  routing.h  sketching.h  skip_list.h  treap.h  (+1 more)
src/: compat_print.h  ral.h
src/chapter1/: binary_planar_partition.h  las_vegas_monte_carlo.h  main.cpp  min_cut.h  probabilistic_recurrence.h  random_utils.h
src/chapter10/: apsp.h  convex_hull.h  delaunay.h  linear_programming.h  main.cpp  min_cut.h  mst.h  random_utils.h
src/chapter11/: apsp.h  dnf_counting.h  main.cpp  min_cut.h  mst.h  random_utils.h  volume.h
src/chapter12/: dnf_counting.h  main.cpp  matchings.h  mis.h  pram_simulation.h  volume.h
src/chapter13/: adversary.h  k_server.h  main.cpp  matchings.h  mis.h  paging.h  pram_simulation.h
src/chapter14/: adversary.h  crypto.h  k_server.h  main.cpp  number_theory.h  paging.h  polynomial.h
src/chapter15/: crypto.h  main.cpp  number_theory.h  polynomial.h
src/chapter2/: adleman.h  game_tree.h  main.cpp  minimax.h
src/chapter3/: adleman.h  coupon_collector.h  game_tree.h  inequalities.h  lazy_select.h  main.cpp  minimax.h  occupancy.h  stable_marriage.h  two_point.h
src/chapter4/: chernoff.h  coupon_collector.h  inequalities.h  lazy_select.h  main.cpp  martingales.h  (+4 more)
(+43 files in other folders)
